--- a/composer.json
+++ b/composer.json
@@ -1,14 +1,17 @@
 {
-    "type": "project",
+    "type": "covid-stats",
     "license": "proprietary",
     "require": {
         "php": "^7.2.5",
         "ext-ctype": "*",
         "ext-iconv": "*",
+        "nelmio/cors-bundle": "^2.0",
         "symfony/console": "5.0.*",
         "symfony/dotenv": "5.0.*",
         "symfony/flex": "^1.3.1",
         "symfony/framework-bundle": "5.0.*",
+        "symfony/maker-bundle": "^1.14",
+        "symfony/orm-pack": "^1.0",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
