--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,9 @@
         "symfony/framework-bundle": "5.0.*",
         "symfony/maker-bundle": "^1.14",
         "symfony/orm-pack": "^1.0",
+        "symfony/serializer-pack": "^1.0",
+        "symfony/templating": "5.0.*",
+        "symfony/twig-pack": "^1.0",
         "symfony/yaml": "5.0.*"
     },
     "require-dev": {
